--- a/dist.ini
+++ b/dist.ini
@@ -1,12 +1,12 @@
-name=Sub-Spec-Object
-version=0.03
+name=Rias-Object
+version=0.04
 author=Steven Haryanto <stevenharyanto@gmail.com>
 license=Perl_5
 copyright_holder=Steven Haryanto
 
 [MetaResources]
-homepage=http://search.cpan.org/dist/Sub-Spec-Object/
-repository=http://github.com/sharyanto/perl-Sub-Spec-Object
+homepage=http://search.cpan.org/dist/Rias-Object/
+repository=http://github.com/sharyanto/perl-Rias-Object
 
 [@Filter]
 bundle=@Classic
@@ -32,11 +32,11 @@ install_command=cpanm -n .
 ;[@Git]
 [Prereqs]
 ; for testing
+Test::Exception=0
 Test::More=0.96
 ; for runtime
 perl=5.010000
-; to specify which protocol version we're following
-Sub::Spec=1.0.1
+Rinci=1.1.0
 
 [Run::Release]
 ;notexist_fatal = 0
