Rename dist from Sub-Spec-Object to Perinci-Object

--- a/dist.ini
+++ b/dist.ini
@@ -1,12 +1,12 @@
-name=Rias-Object
+name=Perinci-Object
 version=0.04
 author=Steven Haryanto <stevenharyanto@gmail.com>
 license=Perl_5
 copyright_holder=Steven Haryanto
 
 [MetaResources]
-homepage=http://search.cpan.org/dist/Rias-Object/
-repository=http://github.com/sharyanto/perl-Rias-Object
+homepage=http://search.cpan.org/dist/Perinci-Object/
+repository=http://github.com/sharyanto/perl-Perinci-Object
 
 [@Filter]
 bundle=@Classic
