Work around dependency problem with some systems [CT]

--- a/dist.ini
+++ b/dist.ini
@@ -38,6 +38,8 @@ Test::More=0.96
 perl=5.010001
 Rinci=1.1.0
 SHARYANTO::String::Util=0
+;;some system cannot find the above, we must supply dist name?
+SHARYANTO::Utils=0.17
 
 [Run::Release]
 ;notexist_fatal = 0
