Fix dependency, SHARYANTO::String::Util 0.18 is already split from SHARYANTO-Utils

--- a/dist.ini
+++ b/dist.ini
@@ -31,15 +31,16 @@ install_command=cpanm -n .
 
 ;[@Git]
 [Prereqs]
-; for testing
+;spec
+Rinci=1.1.13
+
+;testing
 Test::Exception=0
 Test::More=0.96
-; for runtime
+
+;runtime
 perl=5.010001
-Rinci=1.1.0
-SHARYANTO::String::Util=0
-;;some system cannot find the above, we must supply dist name?
-SHARYANTO::Utils=0.17
+SHARYANTO::String::Util=0.18
 
 [Run::Release]
 ;notexist_fatal = 0
