dist: dzil: Force @SHARYANTO version (inspired by chorny)

--- a/dist.ini
+++ b/dist.ini
@@ -10,6 +10,7 @@ homepage=http://search.cpan.org/dist/Perinci-Object/
 repository=http://github.com/sharyanto/perl-Perinci-Object
 
 [@SHARYANTO]
+:version=0.09
 
 [Prereqs / TestRequires]
 Test::Exception=0
