--- a/dist.ini
+++ b/dist.ini
@@ -9,7 +9,7 @@ copyright_holder=Steven Haryanto
 homepage=http://search.cpan.org/dist/Perinci-Object/
 repository=http://github.com/sharyanto/perl-Perinci-Object
 
-[@SHARYANTO]
+[@Author::SHARYANTO]
 :version=0.09
 
 [Prereqs / TestRequires]
