--- a/dist.ini
+++ b/dist.ini
@@ -10,7 +10,7 @@ Test::Exception=0
 Test::More=0.96
 
 [Prereqs]
-;!lint-prereqs assume-used # spec
+;!lint_prereqs assume-used # spec
 Rinci=1.1.63
 
 perl=5.010001
