[dist] Move spec prereqs from RuntimeRequires to DevelopRecommends to reduce deps but still allow indicating spec requirement

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.22
+version=0.23
 
 name=Perinci-Object
 
@@ -10,8 +10,9 @@ Test::Exception=0
 Test::More=0.96
 
 [Prereqs]
-;!lint_prereqs assume-used # spec
-Rinci=1.1.63
-
 perl=5.010001
 String::Trim::More=0
+
+[Prereqs / DevelopRecommends]
+;!lint_prereqs assume-used # spec
+Rinci=1.1.63
