--- a/dist.ini
+++ b/dist.ini
@@ -11,8 +11,13 @@ Test::More=0.96
 
 [Prereqs]
 perl=5.010001
+parent=0
+strict=0
+warnings=0
+Exporter=0
 String::Trim::More=0
 
 [Prereqs / DevelopRecommends]
 ;!lint_prereqs assume-used # spec
 Rinci=1.1.63
+
