--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,9 @@
-version=0.24
+version=0.25
 
 name=Perinci-Object
 
 [@Author::PERLANCAR]
-:version=0.23
+:version=0.53
 
 [Prereqs / TestRequires]
 Test::Exception=0
@@ -18,6 +18,5 @@ Exporter=0
 String::Trim::More=0
 
 [Prereqs / DevelopRecommends]
-;!lint_prereqs assume-used # spec
+;!lint_prereqs assume-used "spec"
 Rinci=1.1.63
-
