--- a/dist.ini
+++ b/dist.ini
@@ -15,8 +15,11 @@ parent=0
 strict=0
 warnings=0
 Exporter=0
-String::Trim::More=0
 
 [Prereqs / DevelopRecommends]
 ;!lint_prereqs assume-used "spec"
 Rinci=1.1.83
+
+[Prereqs / DevelopSuggests]
+;!lint_prereqs assume-used "copy-paste routine"
+String::Trim::More=0
