[dist] Use _SPEC and _COPYPASTE prefixes for dependencies

--- a/dist.ini
+++ b/dist.ini
@@ -16,10 +16,6 @@ strict=0
 warnings=0
 Exporter=0
 
-[Prereqs / DevelopRecommends]
-;!lint_prereqs assume-used "spec"
-Rinci=1.1.83
-
 [Prereqs / DevelopSuggests]
-;!lint_prereqs assume-used "copy-paste routine"
-String::Trim::More=0
+_SPEC::Rinci=1.1.83
+_COPYPASTE::String::Trim::More=0
