--- a/dist.ini
+++ b/dist.ini
@@ -16,6 +16,7 @@ strict=0
 warnings=0
 Exporter=0
 
-[Prereqs / DevelopSuggests]
-_SPEC::Rinci=1.1.83
-_COPYPASTE::String::Trim::More=0.02
+[Prereqs / DevelopX_spec]
+-phase=develop
+-relationship=x_spec
+Rinci=1.1.83
