--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.28
+version=0.29
 
 name=Perinci-Object
 
@@ -20,3 +20,8 @@ Exporter=0
 -phase=develop
 -relationship=x_spec
 Rinci=1.1.83
+
+[Prereqs / DevelopX_copypaste]
+-phase=develop
+-relationship=x_copypaste
+String::Trim::More=0.02
